<resources>
    <string name="app_name">LogMeDown</string>

    <string name="textLoginUsername">Username</string>
    <string name="textLoginPassword">Password</string>

    <string name="textLogOut">Log Out</string>

    <string name="textLogOutPrompt">Do you want to log out?</string>
    <string name="textLogOutYes">Yes</string>
    <string name="textLogOutNo">No</string>

    <string name="textHome">Home</string>
    <string name="textBloc">Bloc</string>
    <string name="textProfile">Profile</string>

    <string name="textAddBloc">Add Bloc</string>
    <string name="textBlocName">Bloc Name</string>
    <string name="textSave">SAVE</string>
    <string name="textCancel">CANCEL</string>

    <string name="textSaveDiscardPrompt">Do you want to discard the note?</string>
    <string name="textSavePrompt">Do you want to save the note?</string>
    <string name="textEditSavePrompt">Do you want to save the changes made to the note?</string>
    <string name="textEditDiscardPrompt">Do you want to discard the changes made to the note?</string>
    <string name="textDeleteNotePrompt">Do you want to delete the selected note?</string>

    <string name="textConfirm">CONFIRM</string>

    <string name="textDiscardBlocPrompt">Do you want to discard the bloc?</string>
    <string name="textSaveBlocPrompt">Do you want to save the bloc?</string>
    <string name="textDeleteBlocPrompt">Do you want to delete the bloc?</string>

    <string name="search_hint">Search for a Note, User, or Bloc</string>
    <string name="textNote">Notes</string>
    <string name="textUser">Users</string>

    <string name="add_friend">Add as Friend</string>
    <string name="remove_friend">Remove as Friend</string>
    <string name="accept_request">Accept Friend Request</string>
    <string name="decline_request">Decline Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="textAccept">ACCEPT</string>
    <string name="textDecline">DECLINE</string>
    <string name="textBack">GO BACK</string>

</resources>
