<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    tools:context="com.example.arces.logmedown.BlocActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAddBloc"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/textBlocName"
        />

    <Button
        android:id="@+id/add_bloc_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/textCancel"
        />

    <Button
        android:id="@+id/add_bloc_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/textSave"
        android:layout_alignTop="@+id/add_bloc_cancel"
        android:layout_toStartOf="@+id/add_bloc_cancel" />

</RelativeLayout>
