<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logmedown.activity.UserViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/user_view_toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="italic" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/user_view_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/user_view_toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_note_img" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_view_user_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_img" />

            <TextView
                android:id="@+id/user_view_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_view_user_img"
                android:gravity="center"
                android:padding="10dp"
                android:text="username"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />

            <Button
                android:id="@+id/user_view_add_friend"
                android:layout_width="150dp"
                android:layout_height="22dp"
                android:layout_below="@id/user_view_user_name"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_rectangle_button"
                android:text="@string/add_friend"
                android:textSize="16dp"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/user_view_friend_container"
                android:layout_below="@id/user_view_user_name"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/user_view_friend_text"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="You're friends with Nancy"
                    android:textColor="@color/colorDarkGray"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
                <Button
                    android:id="@+id/user_view_remove_friend"
                    android:layout_below="@id/user_view_friend_text"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:background="@drawable/rounded_rectangle_button"
                    android:text="@string/remove_friend"/>
                <Button
                    android:id="@+id/user_view_cancel_request"
                    android:layout_below="@id/user_view_friend_text"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:background="@drawable/rounded_rectangle_button"
                    android:text="@string/cancel_friend_request"/>
                <LinearLayout
                    android:id="@+id/user_view_respond_request_container"
                    android:layout_below="@id/user_view_friend_text"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone">
                    <Button
                        android:id="@+id/user_view_accept_request"
                        android:layout_width="90dp"
                        android:layout_height="22dp"
                        android:background="@drawable/rounded_rectangle_button"
                        android:text="@string/textAccept"
                        android:layout_marginRight="5dp"
                        />
                    <Button
                        android:id="@+id/user_view_decline_request"
                        android:layout_width="90dp"
                        android:layout_height="22dp"
                        android:background="@drawable/rounded_rectangle_button"
                        android:text="@string/textDecline"
                        />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_view_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_view_header"
        android:layout_marginTop="10dp"></android.support.v7.widget.RecyclerView>
</RelativeLayout>